fixed chatarea overflow for mobile

--- a/style.css
+++ b/style.css
@@ -166,13 +166,28 @@ button.selected {
 }
 
 @media screen and (max-width: 800px) {
-  /* rescale ui for mobile dimensions */
-  button {
-    font-size: 14px;
+  /* modify ui for mobile */
+  #app {
+    width: 100%;
+    height: 100%;
+  }
+
+  #page-content {
+    width: 100%;
   }
 
   #main-nav-bar {
-    
+    width: 100%;
+  }
+
+  .side-nav {
+    width: 100%;
+    /* prevent scrolling */
+    overflow-y: hidden;
+  }
+
+  button {
+    font-size: 14px;
   }
 
   .vertical-container {
